--- a/BlazorWASM/BlazorWASM.csproj
+++ b/BlazorWASM/BlazorWASM.csproj
@@ -15,4 +15,10 @@
       <ProjectReference Include="..\HttpClient\HttpClient.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="Pages\Login.razor.html">
+        <DependentUpon>Login.razor</DependentUpon>
+      </None>
+    </ItemGroup>
+
 </Project>
